modified files structure
